# accounting

./: .gitignore  README.md  config.yml  demo.sh  pyproject.toml
ai_tool/: main.py
calculation/: __init__.py  cli.py  profit_calculation.py
calculation/financialstatements/: __main__.py  calc.py  cli.py  reconciliation.py  transaction_filters.py
data/: companies.csv  country.csv  stock_exchanges.csv
daybook/: README.md
daybook/domain_knowledge/: README.md
financialstatements/: calc.py  cli.py  pdfgenerator.py  trading_calc.py  transaction_filters.py
financialstatements/incomestatement/: __main__.py  income_item.py  income_statement.py
financialstatements/pdfgeneration/: balance_sheet.typ  income_statement.typ  pdf_generator.py
investment/accounting/: __init__.py  composite_generator.py  generator.py  models.py  profit_calculation.py  transaction_filters.py  util.py
investment/company/: __main__.py  models.py  repository.py
investment/data_extract/: __main__.py  nordea_holdings_extractor.py
investment/holdings/: __main__.py  holdings_extractor.py  holdings_snapshot.py  model.py  models.py  nordea_holdings_extractor.py  nordea_holdings_snapshot.py  nordea_trading_lots_extractor.py  nordea_tradings_extractor.py  return_calculation.py  (+1 more)
query/: transaction_filters.py
tax_report/: __main__.py  generation.py  pdfgenerator.py  transaction_filters.py
tax_report_generation/: README.md  __main__.py  generation.py  transaction_filters.py  transactions_analyzer.py
tests/: test_csv_to_dataframe.py  test_transaction_filters.py  test_transactions_analyzer.py
(+50 files in other folders)
