[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "accounting"
version = "1.0.0"
requires-python = ">=3.12.3"
dependencies = [
    "pandas",
]

[tool.setuptools.packages.find]
include = ["tax_report_generation*", "ai_tool*"]

[project.optional-dependencies]
test = [
    "pytest",
]

