[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "accounting"
version = "1.0.0"
requires-python = ">=3.12.3"
dependencies = [
    "pandas",
    "typst",
]

[tool.setuptools.packages.find]
include = ["tax_report*", "ai_tool*"]

[project.optional-dependencies]
test = [
    "pytest",
]
ai_tool = [
    "openai",
]
